add middle name field

--- a/signup.html
+++ b/signup.html
@@ -108,6 +108,7 @@
         <div class="form-group">
 			<div class="row">
 				<div class="col-xs-6"><input type="text" class="form-control" name="first_name" placeholder="First Name" required="required"></div>
+				<div class="col-xs-6"><input type="text" class="form-control" name="middle_name" placeholder="Middle Name" required="required"></div>
 				<div class="col-xs-6"><input type="text" class="form-control" name="last_name" placeholder="Last Name" required="required"></div>
 			</div>        	
         </div>
