--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
 <div class="container">
 	<form class="form-signin">
   		<img class="mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+  		<h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
   		<label for="inputEmail" class="sr-only">Email address</label>
-  		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  		<input type="email" id="inputEmail" class="form-control" placeholder="User name" required autofocus>
   		<label for="inputPassword" class="sr-only">Password</label>
 		<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
   		<div class="checkbox mb-3">
@@ -22,7 +22,7 @@
     			</label>
   		</div>
   		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  		<p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
+  		<p class="mt-5 mb-3 text-muted">Section-02 Group-03&copy;2019</p>
 	</form>
 </div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
